# FiberRanger

./: .gitignore  20260209-finalAnalysisReport-nist-sts-2.1.2-1000000-200.txt  QRNG.py  README.md  display.py  display_v1.py  main-p0c.c  main.c  pico_sdk_import.cmake  squarewave.pio
images/: transceiver-pinout.avif
src/: CMakeLists.txt  README.md  mbedtls_config.h
